# ffmpeg_study

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ffmpeg_study.sln
cmake_modules/: FindSDL.cmake  Findffmpeg.cmake  build_to_exe_template.cmake  utils.cmake
depends/: SDL.props  SDL2-2.0.14.rar  ffmpeg.props
depends/ffmpeg-20200831-dev/: README.txt
docs/: faq.md
ffmpeg_study/audio_player/: CMakeLists.txt  audio_player.cpp
ffmpeg_study/camera_to_file/: CMakeLists.txt  camera_to_file.cpp
ffmpeg_study/read_video_from_device/: read_video_from_device - Copy.cpp1  read_video_from_device.cpp
ffmpeg_study/video_player/: CMakeLists.txt  video_player.cpp
read_video_from_device/: read_video_from_device.cpp  read_video_from_device.vcxproj  read_video_from_device.vcxproj.filters
read_video_from_device/x64/Debug/: read_video_from_device.exe.recipe
